fix border not showing up

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -227,7 +227,7 @@ body.scrolling-to-black .section.newspaper {
 .info-box {
   /*margin: 0;*/
   padding: 1em 1.5em;
-  border-left: 4px var(--news-text);
+  border-left: 4px solid var(--news-text);
   font-size: 1.05em;
   background: rgba(0, 0, 0, 0.03);
   color: var(--news-text);
